Hide help tooltips with display:none instead of visibility: hidden to mostly fix the statblock excess expansion on the bottom. The statblock will still expand when the tooltip is visible.

--- a/src/css/animations.css
+++ b/src/css/animations.css
@@ -39,7 +39,6 @@
     opacity: 0;
     max-height: 0;
     margin: 0;
-    overflow: hidden;
     visibility: hidden;
   }
 
@@ -47,7 +46,6 @@
     opacity: 0;  
     max-height: 0;
     margin: 0;
-    overflow: hidden;
     visibility: hidden;
   }
 }
@@ -57,7 +55,6 @@
     opacity: 1;
     max-height: 100%;
     margin: 0.3em 0;
-    overflow: visible;
     visibility: visible;
   }
 
@@ -65,7 +62,6 @@
     opacity: 0;
     max-height: 0;
     margin: 0;
-    overflow: hidden;
     visibility: hidden;
   }
 }
